--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ body{
 color: white;
 background-color: forestgreen;
 ss}
+header{
+    border-bottom: ;: solid 2px color: #2323230;b(42,122,228);
+    padding: 20px;
+    font: size 32px;
+    color: wrgb(42,122,228)
+}
